objects/CMPL123CME__Questions_Template__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Assessment_Status__c</fullName>
        <label>Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Suppressed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Assessment_Version__c</fullName>
        <label>Assessment Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Key_Value__c</fullName>
        <label>Key Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Product_Name__c</fullName>
        <formula>CMPL123CME__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Questions_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__QT_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>QT External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipLabel>Assessment Admin</relationshipLabel>
        <relationshipName>Assessment_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assessment Admin</label>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Product_Name__c</columns>
        <columns>CMPL123CME__Stage__c</columns>
        <columns>CMPL123CME__Key_Value__c</columns>
        <columns>CMPL123CME__Assessment_Version__c</columns>
        <columns>CMPL123CME__Assessment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>